--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "chalk": "^5.3.0",
     "cpr": "^3.0.1",
     "vue": "^3.4.5",
-    "ynab": "^2.2.0"
+    "ynab": "^2.2.0",
+    "ynab-api-starter-kit": "file:"
   },
   "devDependencies": {
     "css-loader": "^6.8.1",
+    "dotenv": "^16.4.7",
     "vue-loader": "^17.4.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
